--- a/user.css
+++ b/user.css
@@ -35,6 +35,9 @@
  border-radius: 5px;
 }
 
+.topSectionStreaming-1Tpf5X,
+.topSectionNormal-2-vo2m,
+.topSectionSpotify-1lI0-P,
 .topSectionPlaying-1J5E4n {
   background-size: cover;
   background-repeat: no-repeat;
@@ -63,6 +66,9 @@
 	transform: translateZ(0);
 }
 
+.topSectionStreaming-1Tpf5X,
+.topSectionNormal-2-vo2m,
+.topSectionSpotify-1lI0-P,
 .topSectionPlaying-1J5E4n {
   background-size: cover;
   background-repeat: no-repeat;
@@ -87,7 +93,10 @@
 	-webkit-mask-image: linear-gradient(#000, transparent);
 }
 
+.topSectionNormal-2-vo2m,
+.topSectionSpotify-1lI0-P,
 .topSectionPlaying-1J5E4n,
+.topSectionStreaming-1Tpf5X,
 .userPopout-3XzG_A .header-2BwW8b,
 .userPopout-3XzG_A .scroller-2FKFPG,
 .userPopout-3XzG_A .footer-1fjuF6
@@ -95,6 +104,7 @@
 	z-index: 1;
 }
 
+.headerFill-adLl4x,
 .activity-11LB_k {
   background-color: rgba(0,0,0,0);
 }
