--- a/main.css
+++ b/main.css
@@ -311,6 +311,10 @@
   color: rgb(0, 0, 0) !important;
 }
 
+.colorDefault-2K3EoJ .checkbox-3s5GYZ, .colorDefault-2K3EoJ .radioSelection-1HmrQS {
+  color: var(--accent-color);
+}
+
 /* FRIENDLIST */
 
 .container-1D34oG {
