--- a/main.css
+++ b/main.css
@@ -343,7 +343,8 @@
 .unreadPill-2HyYtt,
 .unreadPillCapStroke-7rkHbg,
 .content-1o0f9g,
-.iconBadge-qZ4Ksk {
+.iconBadge-qZ4Ksk,
+.notificationDot-18QulZ {
   background-color: var(--accent-color);
   border-color: var(--accent-color);
   color: #000;
