--- a/main.css
+++ b/main.css
@@ -343,7 +343,8 @@
 
 /* NOTIF */
 
-.numberBadge-2s8kKX {
+.numberBadge-2s8kKX,
+.newMessagesBar-265mhP {
   background-color: #37a145 !important;
 }
 
