--- a/main.css
+++ b/main.css
@@ -329,6 +329,14 @@
   color: var(--accent-color);
 }
 
+.botTagRegular-2HEhHi {
+  background-color: var(--accent-color);
+}
+
+.ephemeralMessage-1fEWtQ a {
+  color: var(--accent-color);
+}
+
 /* FRIENDLIST */
 
 .container-1D34oG {
