--- a/user.css
+++ b/user.css
@@ -6,7 +6,11 @@
 .userPopout-3XzG_A .scroller-2FKFPG,
 .userPopout-3XzG_A .footer-1fjuF6,
 .headerNormal-T_seeN,
-.body-3iLsc4 {
+.body-3iLsc4,
+.topSectionStreaming-1Tpf5X,
+.topSectionNormal-2-vo2m,
+.topSectionSpotify-1lI0-P,
+.topSectionPlaying-1J5E4n {
   background: rgb(24, 24, 24) !important;
 }
 
